--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ line-bot-sdk >= 1.18.0
 wikipedia >=1.4.0
 gunicorn >= 20.0.4
 python-dotenv >= 0.15.0
+SQLAlchemy >= 1.3.22
+Flask-SQLAlchemy >= 2.4.4
