--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ gunicorn >= 20.0.4
 python-dotenv >= 0.15.0
 SQLAlchemy >= 1.3.22
 Flask-SQLAlchemy >= 2.4.4
-mysqlclient >= 2.0.3
+psycopg2 >= 2.8.6
